# aria-inference-birdnet

./: .gitignore  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: publish.yml  tests.yml
examples/: allowed_species.txt  aviary_config.json
src/aria_inference_birdnet/: __init__.py  birdnet_runtime.py  cli.py  detector.py  io.py  model_store.py  postprocess.py  species_filter.py  temperature.py  utils.py
src/aria_inference_birdnet/assets/: default_thresholds.json
tests/: test_core.py  test_postprocess.py  test_species_filter.py  test_temperature.py
