[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aria-inference-birdnet"
version = "0.1.2"
description = "BirdNET-only inference package for ARIA (Acoustic Recognition for Inventories of Aviaries)"
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = { text = "Apache-2.0" }
authors = [
  { name = "ML4Biodiversity" }
]
keywords = ["bioacoustics", "bird", "species", "detection", "BirdNET"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "birdnet-analyzer>=2.4",
  "numpy>=1.26,<2",
  "click>=8.1,<9",
  "tqdm>=4.66,<5",
]

[project.optional-dependencies]
dev = [
  "pytest>=7",
  "build",
  "twine",
]

[project.scripts]
aria-inference-birdnet = "aria_inference_birdnet.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
aria_inference_birdnet = ["assets/*.json"]
